Refresh ES index at end of job not end of each mapper.